add ruff config

--- a/pixi.toml
+++ b/pixi.toml
@@ -29,6 +29,16 @@ quarto-render = { cmd = "export QUARTO_PYTHON=python && quarto render docs --to 
 docs = { depends-on = ["quarto-preview"] }
 pre-commit = "pre-commit run --all-files"
 
+[tool.ruff]
+# Ruff configuration, see https://docs.astral.sh/ruff/configuration/
+#lint.ignore = [
+    #"E501",  # Line too long
+    #"F401",  # Unused import
+    #"F403",  # 'from module import *' used; unable to detect undefined names
+    #"F405",  # Name may be undefined, or defined from star imports: module
+    #"F841",  # Local variable name is assigned to but never used
+    #"T201",  # Use of print statement (use print() function instead)
+#]
 
 [feature.common.dependencies]
 python = ">=3.11"
