--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,3 +1,4 @@
+---
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v5.0.0
@@ -15,6 +16,7 @@ repos:
     rev: "v1.35.1"
     hooks:
       - id: yamllint
+        args: [--config-file=.yamllint.yaml]
   #### uncomment if unwanted
   - repo: https://github.com/jsh9/pydoclint
     rev: 0.6.2
