pydantic used in example but not in toml

--- a/pixi.toml
+++ b/pixi.toml
@@ -53,6 +53,7 @@ pandas ="*"
 pre-commit = "*"
 pytest ="*"
 pytest-cov = "*"
+pydantic = ">=2.12.4,<3"
 quarto = ">=1.5.57"
 quartodoc = ">=0.9.1"
 ruff = ">=0.8.1"
